k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: footfalls-production
  labels:
    name: footfalls-production
    environment: production
